# StratCPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp
include/: USCPIstrat.h  datafeed.h  parser.h
src/: CMakeLists.txt  Makefile  USCPIstrat.cpp  USCPIstrat.h  cmake_install.cmake  main.cpp  parser.cpp
test/: parser_tests.cpp
